--- a/style.css
+++ b/style.css
@@ -4,13 +4,30 @@
     padding: 0;
     box-sizing: border-box; /* Makes padding and border included in the element's total width and height */
   }
+
+  a {
+    text-decoration: none; /* Remove underlines from all links */
+    color: #2D5FAA; /* Set the default (unvisited) link color (example: a shade of blue) */
+  }
+  
+  a:visited {
+    color: #2D5FAA; /* Set the color for visited links (example: a shade of purple) */
+  }
+  
+  a:hover {
+    color: #B7293F; /* Keep the existing hover color, or change to your liking */
+  }
+  
+  a:active {
+    color: #B7293F; /* Set the color when the link is actively being clicked (example: red) */
+  }  
   
 body {
   font-family: sans-serif;
   line-height: 1.6;
   background-color: #ffffff;
   color: #2D5FAA;
-  max-width: 1200px;  /* Adjust to your desired width */
+  max-width: 1500px;  /* Adjust to your desired width */
   margin: 0 auto;    /* Centers the content */
   padding: 20px;     /* Add padding around the content */
 }
@@ -79,8 +96,8 @@ section {
 footer {
   text-align: center;
   padding: 20px;
-  background-color: #2D5FAA;
-  color: #fff;
+  background-color: #ffffff;
+  color: #2D5FAA;
 }
 
 @media (max-width: 768px) {
